package seedu.eylah.diettracker.model;

/**
 * This is the class the represents the enum for the different modes of the diet tracker.
 */
public enum Mode {
    LOSS,
    GAIN,
    MAINTAIN
}
